allow-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: good
  template:
    metadata:
      labels:
        app: good
    spec:
      containers:
      - name: good
        image: nginx:1.25
