restrict-initcontainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-initcontainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-initcontainer
  template:
    metadata:
      labels:
        app: test-initcontainer
    spec:
      containers:
      - name: main
        image: nginx:latest
