statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forbidden-sts
spec:
  serviceName: "forbidden"
  replicas: 1
  selector:
    matchLabels:
      app: forbidden
  template:
    metadata:
      labels:
        app: forbidden
    spec:
      containers:
        - name: test
          image: af.switchmedia.asia/someimage:latest
